@startuml rides-components

title "Rides microservice"

left to right direction

component "DB"
interface "Rides API" as RidesAPI
interface "EBikes API" as EBikesAPI
interface "Users API" as UsersAPI

hexagon Adapters {
    hexagon Domain as DomainHex {
        component Domain {
            'ports in or out are just used for layout purposes and do not have any semantic'
            portin UsersService
            portin RidesService
            portout "RidesRepository" as Repo
            portout EBikesService
        }
    }

    component "RepositoryAdapter" as RepoAdapter
    RepoAdapter -l-> DB
    RepoAdapter -u-|> Repo

    component EBikesAdapter
    EBikesAdapter -r-( EBikesAPI
    EBikesAdapter -u-|> EBikesService

    component "HTTPPresentationAdapter" as HTTPAdapter
    HTTPAdapter -l-() RidesAPI
    HTTPAdapter -d-> RidesService

    component UsersAdapter
    UsersAdapter -r-( UsersAPI
    UsersAdapter -d-|> UsersService
}

component "EBikes" as EBikes <<Microservice>>
EBikes -r-() EBikesAPI

component "Users" as Users <<Microservice>>
Users -r-() UsersAPI

@enduml
